# docker-db-manager

./: LICENSE  README.md  TERMINAL_ANALYSIS.md  TERMINAL_FIXES.md  biome.json  package-lock.json  package.json  plan.md  pnpm-lock.yaml  q.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: App.css  edit-container.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: database.rs  docker.rs  window.rs
src-tauri/src/services/: docker.rs
src-tauri/src/types/: docker.rs  mod.rs
src-tauri/tests/: integration_tests.rs  unit_tests.rs
src-tauri/tests/integration/: mongodb_integration_test.rs  mysql_integration_test.rs  postgresql_integration_test.rs  redis_integration_test.rs  utils.rs
src-tauri/tests/unit/: docker_service_test.rs  generic_commands_test.rs
src/features/app/: use-app.ts
src/features/app/hooks/: use-app-updater.ts
src/features/containers/api/: containers.api.ts  generic-containers.api.ts
src/features/containers/hooks/: use-container-actions.ts
src/features/databases/api/: databases.api.ts
src/features/databases/components/: dynamic-form-field.tsx  dynamic-form-section.tsx
src/features/databases/hooks/: use-database-actions.ts  use-database-list.ts  use-registry.ts
src/features/databases/providers/: elasticsearch.provider.tsx  index.ts  influxdb.provider.tsx  mariadb.provider.tsx  mongodb.provider.tsx  mysql.provider.tsx  postgres.provider.tsx  redis.provider.tsx  sqlserver.provider.tsx
src/features/databases/registry/: database-registry.ts  (+1 more)
src/pages/edit-container/: EditContainerPage.tsx
src/pages/main/: MainPage.tsx
src/shared/types/: container.ts
src/shared/utils/: container.ts
src/test/unit/: database-registry.test.ts  providers.test.ts
src/test/utils/: mock-providers.ts  test-utils.tsx
(+30 files in other folders)
