[package]
name = "docker-db-manager"
version = "0.0.0"
description = "A desktop application for managing Docker database containers"
authors = ["AbianS"]
license = "GPL-3.0"
edition = "2021"
homepage = "https://github.com/AbianS/docker-db-manager"
repository = "https://github.com/AbianS/docker-db-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "docker_db_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-store = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1.48.0", features = ["full"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"
